# ChangeLog for dev-util/netbeans
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.0_alpha10_pre20070608171640.ebuild,
  -netbeans-6.0_alpha10_pre20070611093109.ebuild,
  netbeans-6.0_alpha10_pre20070619185104.ebuild:
  Minor fixes. Old broken versions removed.

  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070619185104.ebuild:
  Some fixes.

  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-6.0_alpha10_pre20070619185104.ebuild:
  Version bump. Still testing this one.

  11 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070611093109.ebuild:
  fixed compilation of just nb platform

  11 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-6.0_alpha10_pre20070611093109.ebuild:
  Version bump

  10 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  unbundled many src_compile jars

  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  fixed jruby perms update

  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  hopefully fixed that problem with nb startup

  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  Added workaround for missing org-netbeans-libs-glassfish_logging.jar, still
  there are some problems at startup of nb

  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  netbeans-6.0: fixed requirements for 'experimental' use flag

  09 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +files/6.0/visualweb-JxpsSerializer.java-xerces-2.8.1.patch,
  netbeans-6.0_alpha10_pre20070608171640.ebuild:
  netbeans-6.0: several fixes and improvements

  08 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.0_alpha10_pre20070519031150.ebuild,