@@ -64,6 +64,7 @@ DIST netbeans-serverplugins-6.0-m10_pre20070619185104.tar.bz2 3186652 RMD160 b5b
 DIST netbeans-subversion-6.0-m10_pre20070619185104.tar.bz2 2357517 RMD160 73accb61411262e50fa36b615e3eadbf27d953f9 SHA1 028357721878ee6932c2aa9c1caa19432b4837fb SHA256 521bcf8d25af2d6d36893ded8e0a46e0eb64ad48520bfad9d46fd61b2b3d31f2
 DIST netbeans-sysprops-6.0-m10_pre20070619185104.tar.bz2 39190 RMD160 a6f35ce2347f823dcdec63449db5d01404860957 SHA1 9d64259603cff2edd8e2a48dcf5afe4062bd65f3 SHA256 07011c9d38543369729e50fc2e0322395a3545d18cc6f065ba0dd0d8404df284
 DIST netbeans-tasklist-6.0-m10_pre20070619185104.tar.bz2 4716949 RMD160 5fbb3c17500cd909a5093633a614dbd08af7aa5c SHA1 08a6a0e89bf6ca1271d508a227e2b2a24ad4c2bf SHA256 e029d38ab7b067279f91aa95705fc29b475b4167d81cb57e653b5e3c6422ee44
+DIST netbeans-tomcatint-6.0-m10_pre20070619185104.tar.bz2 9229105 RMD160 9afd531b9f4334e4c4ba17470b8d00f5bea96c2c SHA1 9fd054f65d7bb2af277ff244cf961ec61c539fd2 SHA256 da529df0cec24d81ec05e51e734988e7350a142f4a5a7f992b118502efc2859e
 DIST netbeans-uml-6.0-m10_pre20070619185104.tar.bz2 25614841 RMD160 79aeb5496f241da78d75395fae0e398e7cd6e8d0 SHA1 c527a5ba506520848d444a1734b81eae42e555a9 SHA256 1da20a60936c76556b795d2dd609f9e0dbcffca4fb43ed1127eb0108ba5b2f33
 DIST netbeans-usersguide-6.0-m10_pre20070619185104.tar.bz2 7380737 RMD160 ca53100eb3673290142545a707745512a65ea24a SHA1 44ba283a7b5cd634ba7877415870638a9db88fc1 SHA256 73fb7eacfbc3002f3f81bf0d2c27a7e7a063d68849d7aa969d19fbd8d7d87169
 DIST netbeans-utilities-6.0-m10_pre20070619185104.tar.bz2 303954 RMD160 ccdd67880295df85bf501d88f4c09f97f483ab49 SHA1 7b44347afafb9a4d22388b538e0e6e9d0e19fa02 SHA256 c2ee7d4f03330b0a7c3b28cbc190bc95f85e6981d7e9b5068097e8ac13df3087
@@ -77,6 +78,6 @@ DIST netbeans-xml-6.0-m10_pre20070619185104.tar.bz2 7707247 RMD160 f11d9d187af5d
 DIST netbeans-xtest-6.0-m10_pre20070619185104.tar.bz2 4710013 RMD160 5afbf9fa2592427d42745ba74e65c9a4d534c1ff SHA1 6ea6e06364c7b8118e94fafcd9f0d5b84385ddf7 SHA256 8f29542db3008e6cd3f5c943efb6b83c90e1d6fb83158997f946c6e772a59488
 DIST netbeans_mobility-5_5_1-linux.bin 52745216 RMD160 2058ac6701b47f378ead48851329420360169980 SHA1 844fc236667b5a3df57c6c1b195d246a900a6029 SHA256 a47e9ef5f2fdce60d2c6b65ad1e76be8b70257b89ae60dae1bdc33965e814f27
 EBUILD netbeans-5.5.1.ebuild 15257 RMD160 a6690d8fc51713e540d264b3c7de7dc6c1b8fa26 SHA1 ac9ceb18f01639ccf02e2a71d32f1749723ee54a SHA256 7ae84f3ad1d82ebd5d351cd806bb3c4abb8f185e9c21bf6618783ee0efad5158
-EBUILD netbeans-6.0_alpha10_pre20070619185104.ebuild 31612 RMD160 6a94788ed14788dbfe0de987ffb7c05e90bd635d SHA1 b22f78cdccf4b32f0e5affd6f6edd709305468e4 SHA256 875e64d919bfe0e483eea8aeb316e79994b78ad0d0ccc75666609de3f50fa623
-MISC ChangeLog 16417 RMD160 ec080019c9a5695f1d4790935121bab985d059b2 SHA1 bbff9f727d883c94bf4d0b7a42663e635916be46 SHA256 649a7f27391259569094309dd30614c013874c57e794f06322d5e8309e02f799
+EBUILD netbeans-6.0_alpha10_pre20070619185104.ebuild 31404 RMD160 a8ad294cad6c4de933ea08614df2a4999dc5333b SHA1 64cbb17f2f3d705beb6f3cf214d00bf2de0ebb57 SHA256 26fe07ab7d9487207745dfb574d2e860d673f84facc49d100017f809164e573d
+MISC ChangeLog 16554 RMD160 5fdd8c02856f9c0277d350355c2f3100bc7ecafc SHA1 1a0314853869f0e893adfbbc71805bfc49132906 SHA256 f781d61a4cbb4a888f8a89cfd05bd6c1c706172e5e3787f5c792b2affdceea1f
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
