@@ -3,6 +3,10 @@
 # $Header: $
 
   20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
+  netbeans-6.0_alpha10_pre20070619185104.ebuild:
+  Added missing support for tomcat
+
+  20 Jun 2007; Miroslav Šulc <fordfrog@gentoo.org>
   -netbeans-6.0_alpha10_pre20070608171640.ebuild,
   -netbeans-6.0_alpha10_pre20070611093109.ebuild,
   netbeans-6.0_alpha10_pre20070619185104.ebuild:
